# solsquad_bootcamp

./: .gitignore  README.md  new.py  poetry.py  pyproject.toml
data/: ejer9.csv  filter-2023.csv  filter_date  filtered.csv  filtered_900.csv  test.csv  test_1.csv
scripts/: filter_accounts.py
src/solsquad_bootcamp/: afterdate.py  devarsuarez.py  filter-2023.py  filter_2023_aj.py  filter_accounts.py  filter_data_900.py  filter_dates.py  main.py  main_mod.py  mi_script.py
tests/: test_main.py
