[project]
name = "solsquad-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Wil Aguilar",email = "wilberto.aguilar-aleman@t-systems.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "typer (>=0.20.0,<0.21.0)"
]


[tool.poetry.scripts]
filter_after_date = "src.solsquad_bootcamp.filter_after_date:main"
extract_all = "src.solsquad_bootcamp.main:main"
extract_filtered = "src.solsquad_bootcamp.main:filtered"
afterdate = "src.solsquad_bootcamp.afterdate:main"
filter-2023 = "src.solsquad_bootcamp.filter-2023:main"
filter_accounts = "src.solsquad_bootcamp.filter_accounts:main"
devarsuarez = "src.solsquad_bootcamp.devarsuarez:main"
filter_dates = "src.solsquad_bootcamp.filter_dates:main"
extract_age = "src.solsquad_bootcamp.main_mod:main"
filter-2023-aj = "src.solsquad_bootcamp.filter_2023_aj:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
